Fixed broken layout

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   height: 150px;
   padding: 20px;
   color: white;
-  margin-bottom: 50px;
+  margin-bottom: 150px;
 }
 
 .App-title {
